--- a/.classpath
+++ b/.classpath
@@ -56,9 +56,18 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/AIRLog4j2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jaf-1.1.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.mail-1.6.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/cache-api-1.0.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/management-model-2.0.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ehcache-3.5.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/com.springsource.sts.ide.tomcat.runtimeTarget/Pivotal tc Server Developer Edition (Runtime) v3.2">
+		<attributes>
+			<attribute name="owner.project.facets" value="jst.web"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre-9.0.4">
 		<attributes>
 			<attribute name="module" value="true"/>
+			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="build/classes"/>
