--- a/.classpath
+++ b/.classpath
@@ -42,9 +42,6 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/com.ibm.jbatch-tck-spi-1.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.batch-api-1.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jettison-1.3.4.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.6.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-jdk14-1.6.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-log4j12-1.6.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-batch-core-3.0.0.RELEASE.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-batch-infrastructure-3.0.1.RELEASE.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-batch-integration-1.2.2.RELEASE.jar"/>
@@ -59,6 +56,11 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/cache-api-1.0.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/management-model-2.0.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ehcache-3.5.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/log4j-1.2-api-2.10.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/log4j-slf4j-impl-2.10.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.8.0-alpha2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-jdk14-1.8.0-alpha2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-log4j12-1.8.0-alpha2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/com.springsource.sts.ide.tomcat.runtimeTarget/Pivotal tc Server Developer Edition (Runtime) v3.2">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
@@ -66,7 +68,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre-9.0.4">
 		<attributes>
-			<attribute name="module" value="true"/>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
